fix: Adjusting gap and padding of container menu for responsive design

--- a/styles/components/menu.css
+++ b/styles/components/menu.css
@@ -71,6 +71,8 @@
         display: flex;
         flex-direction: column;
         align-items: stretch;
+        gap: 1rem;
+        padding: 1rem;
     }
 
     .container__menuOptions > div {
